--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -4,7 +4,7 @@
     <title>my first webpage!</title>
   </head>
   <body>
-    hello, world!
-    welcome to my first webpage!
+    <p>Hello, world!</p>
+    <p>Welcome to my first web page!</p>
    </body>
 </html>
