--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -2,7 +2,9 @@
 <html> 
   <head>
     <title>my first webpage!</title>
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
   </head>
+
   <body>
     <h1>My First Webpage</h1>
     <h2>Written with a little guidance from <em>Moringa School</em></h2>
@@ -16,6 +18,10 @@
       <li>JavaScript</li>
       <li>And a lot more!</li>
     </ol>
+    <ul>
+      <li>ul item1</li>
+      <li>ul item2</li>
+    </ul>
     <p>Check out <a href="http://moringaschool.com/">Moringa School</a>. It's a great place to learn web development skills!</p>
     <img src="images/elephant.jpeg" alt="A photo of an elephant">
    </body>
